mod/quizport add new settings 'graded activity' to prev/next activity functionality

--- a/lang/en_utf8/help/quizport/entrycm.html
+++ b/lang/en_utf8/help/quizport/entrycm.html
@@ -11,6 +11,8 @@
 <ul>
     <li>Previous activity in this course</li>
     <li>Previous activity in this section</li>
-    <li>Previous QuizPort in this course</li>
-    <li>Previous QuizPort in this section</li>
+    <li>Previous graded activity in this course</li>
+    <li>Previous graded activity in this section</li>
+    <li>Previous QuizPort activity in this course</li>
+    <li>Previous QuizPort activity in this section</li>
 </ul>
