--- a/lang/en_utf8/help/quizport/exitcm.html
+++ b/lang/en_utf8/help/quizport/exitcm.html
@@ -12,8 +12,10 @@
 <ul>
     <li>Next activity in this course</li>
     <li>Next activity in this section</li>
-    <li>Next QuizPort in this course</li>
-    <li>Next QuizPort in this section</li>
+    <li>Next graded activity in this course</li>
+    <li>Next graded activity in this section</li>
+    <li>Next QuizPort activity in this course</li>
+    <li>Next QuizPort activity in this section</li>
 </ul>
 <p>
     If other exit page options are disabled and the student
