mod/quizport add preliminary JMatch Sort output format

--- a/lang/en_utf8/help/quizport/index.html
+++ b/lang/en_utf8/help/quizport/index.html
@@ -53,6 +53,7 @@
     <li><a href="help.php?module=quizport&amp;file=studentfeedback.html">Student feedback</a></li>
     <li><a href="help.php?module=quizport&amp;file=timelimit.html">Time limit</a></li>
     <li><a href="help.php?module=quizport&amp;file=title.html">Title</a></li>
+    <li><a href="help.php?module=quizport&amp;file=allowpaste.html">Allow paste</a></li>
     <li><a href="help.php?module=quizport&amp;file=usefilters.html">Use filters</a></li>
     <li><a href="help.php?module=quizport&amp;file=useglossary.html">Use glossary</a></li>
     <li><a href="help.php?module=quizport&amp;file=usemediafilter.html">Use media filter</a></li>
